# py-dotpath

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_dotpath/: __init__.py
tests/: test_dotpath.py  test_import.py
