[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-dotpath"
version = "0.2.2"
description = "Access and mutate deeply nested dicts using dot-notation paths"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["dict", "dotpath", "nested", "json", "dot-notation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-dotpath#readme"
Repository = "https://github.com/philiprehberger/py-dotpath"
Issues = "https://github.com/philiprehberger/py-dotpath/issues"
Changelog = "https://github.com/philiprehberger/py-dotpath/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_dotpath"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
